# icebreaker

./: config.yaml  pyproject.toml  readme.md
src/icebreaker/: config.py  main.py  pyproject.toml
src/icebreaker/models/: metrics.py
src/icebreaker/repository/: duckdb_repo.py
src/icebreaker/services/: assistant.py  metrics_service.py  recommendation_service.py
src/icebreaker/ui/: dashboard.py
